minecraft.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-minecraft
  labels:
    app: minecraft
    tier: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: minecraft
      tier: server
  template:
    metadata:
      name: pod-minecraft
      labels:
        app: minecraft
        tier: server
    spec:
      containers:
        - name: container-minecraft
          image: openhack/minecraft-server
          ports:
            - containerPort: 25565
          resources:
            requests:
              memory: "2G"
              cpu: "100m"
            limits:
              memory: "4G"
              cpu: "1000m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-minecraft
spec:
  selector:
    app: minecraft
    tier: server
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
  clusterIP: 10.92.10.1
  type: LoadBalancer

# TODO: move to google gaming services
